--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section style="padding: 2rem 1rem; max-width: 800px; margin: 3rem auto; text-align: center;">
+  <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
   <h2>Contact Us</h2>
   <p style="font-size: 1.1rem; max-width: 600px; margin: 0.5rem auto 1.5rem;">
     We'd love to hear from you if you have a project in mind or simply want to learn more about how we can support your work.
