--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section>
+  <section style="max-width: 1000px; margin: 3rem auto; text-align: center;">
   <h2>About Us</h2>
   <div style="padding-left: 15%; padding-right: 15%;">
     <p style="text-align: center;">
