--- a/services.html
+++ b/services.html
@@ -76,7 +76,7 @@
   <section>
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
-    <h3>4. Other Consultancy Services</h3>
+    <h3>4. Consultancy Services</h3>
     <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
     <ul>
