--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <section style="max-width: 1150px; margin: 3rem auto;">
     <h2>Our Services & Experience</h2>
   </section>
 
