--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <h2>About Us</h2>
   <div style="padding-left: 15%; padding-right: 15%;">
     <p style="text-align: center;">
-      At Apex Science & Conservation, we provide scientific support and deliver 
+      At <b>Apex Science & Conservation</b>, we provide scientific support and deliver 
       nature conservation research that is both rigorous and directly relevant to real-world decisions.
     </p>
     <p style="text-align: center;">
