--- a/about.html
+++ b/about.html
@@ -35,6 +35,20 @@
   </div>
 </section>
 
+  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h2>About Us</h2>
+  <div style="padding-left: 15%; padding-right: 15%;">
+    <p style="text-align: center;">
+      At <b>Apex Science & Conservation</b>, we provide <b>scientific support</b> and deliver 
+      <u>nature conservation research</u> that is both <b>rigorous</b> and <b>directly relevant</b> to real-world decisions.
+    </p>
+    <p style="text-align: center;">
+      We partner with <b>NGOs</b>, <b>government agencies</b>, and <b>research institutions</b>, 
+      bringing <b>expertise</b> and <b>capacity</b> to deliver projects that might not otherwise be possible.
+    </p>
+  </div>
+</section>
+
   <section>
     <h2>Our work spans three key areas...</h2>
     
