--- a/about.html
+++ b/about.html
@@ -49,6 +49,21 @@
   </div>
 </section>
 
+  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h2>About Us</h2>
+  <div style="padding-left: 15%; padding-right: 15%;">
+    <p style="text-align: center;">
+      At <strong>Apex Science & Conservation</strong>, we provide <strong>scientific support</strong> and deliver 
+      nature conservation research that is <em>rigorous</em> and <em>relevant to real-world decisions</em>.
+    </p>
+    <p style="text-align: center;">
+      We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and <strong>research institutions</strong>, 
+      bringing the <strong>expertise</strong> and <strong>capacity</strong> needed to deliver projects that 
+      <em>might not otherwise be possible</em>.
+    </p>
+  </div>
+</section>
+
   <section>
     <h2>Our work spans three key areas...</h2>
     
