--- a/about.html
+++ b/about.html
@@ -64,6 +64,22 @@
   </div>
 </section>
 
+  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h2>About Us</h2>
+  <div style="padding-left: 12%; padding-right: 12%;">
+    <p>
+      At <strong>Apex Science & Conservation</strong>, we deliver <strong>evidence-based research</strong> and 
+      <strong>scientific support</strong> to advance nature conservation that is <em>rigorous</em> and 
+      <em>practical for real-world decisions</em>.
+    </p>
+    <p>
+      We work alongside <strong>NGOs</strong>, <strong>government agencies</strong>, and 
+      <strong>research institutions</strong>, bringing the <strong>expertise</strong> and 
+      <strong>capacity</strong> to drive forward projects that <em>create meaningful conservation impact</em>.
+    </p>
+  </div>
+</section>
+
   <section>
     <h2>Our work spans three key areas...</h2>
     
