--- a/testimonials.html
+++ b/testimonials.html
@@ -22,7 +22,7 @@
   </header>
 
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-    <h2>Our Services & Experience</h2>
+    <h2>Testimonials</h2>
   </section>
   
   <section style="position: relative; width: 100%; height: 500px; margin: 0 auto; overflow: hidden;">
@@ -30,20 +30,9 @@
   <img src="images/evidence-synthesis.jpg" alt="Image"
        style="width: 100%; height: 100%; object-fit: cover; display: block;">
 
-  <h2 style="
-    position: absolute;
-    top: 2rem;
-    left: 2.2rem;
-    color: white;
-    font-size: 1.65rem;
-    font-weight: 600;
-    margin: 0;">
-    Testimonials
-  </h2>
-
   <div style="
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 10%;
     right: 40%;
     color: white;
@@ -56,7 +45,7 @@
 
   <div style="
     position: absolute;
-    top: 45%;
+    top: 40%;
     left: 40%;
     right: 10%;
     color: white;
