--- a/about.html
+++ b/about.html
@@ -66,14 +66,14 @@
 
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
   <h2>About Us</h2>
-  <div style="padding-left: 12%; padding-right: 12%;">
+  <div style="padding-left: 15%; padding-right: 15%;">
     <p>
-      At <strong>Apex Science & Conservation</strong>, we deliver <strong>evidence-based research</strong> and 
-      <strong>scientific support</strong> to advance nature conservation that is <em>rigorous</em> and 
-      <em>practical for real-world decisions</em>.
+      At <strong>Apex Science & Conservation</strong>, we provide <strong>scientific support</strong> and 
+      deliver <strong>nature conservation research</strong> that is both <em>rigorous</em> and 
+      <em>relevant</em> to real-world decisions.
     </p>
     <p>
-      We work alongside <strong>NGOs</strong>, <strong>government agencies</strong>, and 
+      We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
       <strong>research institutions</strong>, bringing the <strong>expertise</strong> and 
       <strong>capacity</strong> to drive forward projects that <em>create meaningful conservation impact</em>.
     </p>
