--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     <p>
       We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
       <strong>research institutions</strong>, bringing the <strong>expertise</strong> and 
-      <strong>capacity</strong> to drive forward projects that <em>create meaningful conservation impact</em>.
+      <strong>capacity</strong> to deliver projects that might not otherwise be possible.
     </p>
   </div>
 </section>
