--- a/about.html
+++ b/about.html
@@ -24,49 +24,6 @@
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
   <h2>About Us</h2>
   <div style="padding-left: 15%; padding-right: 15%;">
-    <p style="text-align: center;">
-      At <b>Apex Science & Conservation</b>, we provide scientific support and deliver 
-      nature conservation research that is both rigorous and directly relevant to real-world decisions.
-    </p>
-    <p style="text-align: center;">
-      We partner with NGOs, government agencies, and research institutions, 
-      bringing expertise and capacity to deliver projects that might not otherwise be possible.
-    </p>
-  </div>
-</section>
-
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h2>About Us</h2>
-  <div style="padding-left: 15%; padding-right: 15%;">
-    <p style="text-align: center;">
-      At <b>Apex Science & Conservation</b>, we provide <b>scientific support</b> and deliver 
-      <u>nature conservation research</u> that is both <b>rigorous</b> and <b>directly relevant</b> to real-world decisions.
-    </p>
-    <p style="text-align: center;">
-      We partner with <b>NGOs</b>, <b>government agencies</b>, and <b>research institutions</b>, 
-      bringing <b>expertise</b> and <b>capacity</b> to deliver projects that might not otherwise be possible.
-    </p>
-  </div>
-</section>
-
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h2>About Us</h2>
-  <div style="padding-left: 15%; padding-right: 15%;">
-    <p style="text-align: center;">
-      At <strong>Apex Science & Conservation</strong>, we provide <strong>scientific support</strong> and deliver 
-      nature conservation research that is <em>rigorous</em> and <em>relevant to real-world decisions</em>.
-    </p>
-    <p style="text-align: center;">
-      We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and <strong>research institutions</strong>, 
-      bringing the <strong>expertise</strong> and <strong>capacity</strong> needed to deliver projects that 
-      <em>might not otherwise be possible</em>.
-    </p>
-  </div>
-</section>
-
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h2>About Us</h2>
-  <div style="padding-left: 15%; padding-right: 15%;">
     <p>
       At <strong>Apex Science & Conservation</strong>, we provide <strong>scientific support</strong> and 
       deliver <strong>nature conservation research</strong> that is both <em>rigorous</em> and 
@@ -74,7 +31,7 @@
     </p>
     <p>
       We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
-      <strong>research institutions</strong>, bringing the <strong>expertise</strong> and 
+      <strong>research institutions</strong>, bringing <strong>expertise</strong> and 
       <strong>capacity</strong> to deliver projects that might not otherwise be possible.
     </p>
   </div>
