--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
   <div style="padding-left: 15%; padding-right: 15%;">
     <p>
       At <strong>Apex Science & Conservation</strong>, we provide <strong>scientific support</strong> and 
-      deliver <strong>nature conservation research</strong> that is both <em>rigorous</em> and 
-      <em>relevant</em> to real-world decisions.
+      deliver <strong>nature conservation research</strong> that is both <u>rigorous</u> and 
+      <u>relevant</u> to real-world decisions.
     </p>
     <p>
       We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
