--- a/testimonials.html
+++ b/testimonials.html
@@ -40,7 +40,7 @@
     font-size: 1rem;
     text-align: left;">
     <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
-    <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">Sam Manning, The Woodland Trust</p>
+    <p style="margin-top: 0.5rem; font-weight: bold;">Sam Manning, The Woodland Trust</p>
   </div>
 
   <div style="
@@ -53,7 +53,7 @@
     font-size: 1rem;
     text-align: right;">
     <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-    <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 2, ORGANISATION 2</p>
+    <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 2, ORGANISATION 2</p>
   </div>
 
   <div style="
@@ -66,7 +66,7 @@
     font-size: 1rem;
     text-align: left;">
     <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-    <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 3, ORGANISATION 3</p>
+    <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 3, ORGANISATION 3</p>
   </div>
 
 </section>
