--- a/services.html
+++ b/services.html
@@ -25,6 +25,10 @@
     <h2>Our Services & Experience</h2>
   </section>
 
+  <section style="max-width: 50%; margin: 3rem auto; text-align: left;">
+  <h2>Our Services & Experience</h2>
+</section>
+
   <section>
 <div class="sidepicture-section">
   <div class="sidepicture-text">
