--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
     <h2>Our Services & Experience</h2>
   </section>
 
-  <section style="max-width: 50%; margin: 3rem auto; text-align: left;">
+  <section style="width: 50%; margin: 3rem 0 3rem 5%; text-align: left;">
   <h2>Our Services & Experience</h2>
 </section>
 
