--- a/testimonials.html
+++ b/testimonials.html
@@ -21,9 +21,9 @@
     </nav>
   </header>
 
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-    <h2>Testimonials</h2>
-  </section>
+  <section style="width: 58.5%; margin: 3rem 0; text-align: left;">
+  <h2>Testimonials</h2>
+</section>
   
   <section style="position: relative; width: 95%; height: 600px; margin: 0 auto; overflow: hidden;">
 
