--- a/publications.html
+++ b/publications.html
@@ -21,8 +21,11 @@
     </nav>
   </header>
 
-  <section>
+  <section style="width: 58%; margin: 3rem 0; text-align: left;">
   <h2>Publications</h2>
+</section>
+
+  <section>
   <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
   </p>
