--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
   <h2>About Us</h2>
   <div style="padding-left: 15%; padding-right: 15%;">
     <p>
-      At <strong>Apex Science & Conservation</strong>, we provide <strong>scientific support</strong> and 
-      deliver <strong>nature conservation research</strong> that is both <u>rigorous</u> and 
-      <u>relevant</u> to real-world decisions.
+      At <strong>Apex Science & Conservation</strong>, we provide scientific support and 
+      deliver nature conservation research that is both <strong>rigorous</<strong>> and 
+      <<strong>>relevant</<strong>> to real-world decisions.
     </p>
     <p>
       We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
