--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     <div style="flex: 1 1 45%; max-width: 45%; text-align: center;">
       <img src="images/photo-emily.jpg" alt="Dr Emily Duncan" style="height: 100%; max-height: 350px; width: auto; border-radius: 8px; margin-bottom: 1rem;">
       <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
-      <p>Emily is a conservation biologist with more than a decade of experience carrying out marine research globally.</p>
+      <p>Emily is a conservation biologist with more than a decade of experience carrying out marine research across the world.</p>
       <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the prestigious Forbes 30 Under 30 list. 
         Emily is experienced in delivering large collaborative international projects, and positions policy and community engagement at the heart of her work.</p>
     </div>
