--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
   </div>
-  <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
+  <img src="images/anything-else.jpg" alt="" class="sidepicture-image">
 </div>
   </section>
 
