--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <p>
       At <strong>Apex Science & Conservation</strong>, we provide scientific support and 
       deliver nature conservation research that is both <strong>rigorous</<strong>> and 
-      <<strong>>relevant</<strong>> to real-world decisions.
+      <strong>relevant</<strong>> to real-world decisions.
     </p>
     <p>
       We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
