--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide data management and analysis, 
       grant writing, programme development, and other consultancy services to support effective, evidence-based conservation.</p>
   </div>
-  <img src="images/evidence-synthesis.jpg" alt="Our Work Areas" class="sidepicture-image">
+  <img src="images/road-verge.jpg" alt="Our Work Areas" class="sidepicture-image">
 </div>
 
     <p style="text-align: center; margin-top: 1.5rem;">
