--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <div style="padding-left: 15%; padding-right: 15%;">
     <p>
       At <strong>Apex Science & Conservation</strong>, we provide scientific support and 
-      deliver nature conservation research that is both <strong>rigorous</<strong>> and 
+      deliver nature conservation research that is both <strong>rigorous</strong> and 
       <strong>relevant</<strong>> to real-world decisions.
     </p>
     <p>
