--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
   </div>
-  <img src="images/anything-else.jpg" alt="" class="sidepicture-image">
+  <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
 </div>
   </section>
 
@@ -96,7 +96,7 @@
     <h3>5. ANYTHING ELSE EMILY?</h3>
     <p>[Or split out e.g. Grant Writing from above?]</p>
   </div>
-  <img src="images/anything-else.jpg" alt="" class="sidepicture-image">
+  <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
 </div>
   </section>
 
