--- a/testimonials.html
+++ b/testimonials.html
@@ -27,7 +27,7 @@
   
   <section style="position: relative; width: 95%; height: 600px; margin: 0 auto; overflow: hidden;">
 
-  <img src="images/evidence-synthesis.jpg" alt="Image"
+  <img src="images/footprints.jpg" alt="Image"
        style="width: 100%; height: 100%; object-fit: cover; display: block;">
 
   <div style="
