--- a/services.html
+++ b/services.html
@@ -29,10 +29,11 @@
 <div class="sidepicture-section">
   <div class="sidepicture-text">
     <h3>1. Evidence Synthesis</h3>
-    <p>We are experienced in collating evidence (on a wide variety of topics) to a rigorous scientific standard.</p>
-    <p>Our experience includes reviewing evidence for...</p>
+    <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping organisations to make informed decisions based on the best available knowledge.</p>
+    <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
+
     <ul>
-      <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and <a href="https://doi.org/10.1111/1365-2664.13556">for other environmental and social benefits</a>.</li> 
+      <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
       <li>Environmental links between forests and oceans for The Woodland Trust.</li>
       <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
     </ul>
