--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
   </section>
 
   <section>
-    <h2>2. Data Services & Geographical Information Systems (GIS)</h2>
+    <h2 style="text-align: right;">2. Data Services & Geographical Information Systems (GIS)</h2>
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
     <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
@@ -62,10 +62,10 @@
     <h2>3. Social Science Approaches</h2>
 <div class="sidepicture-section">
   <div class="sidepicture-text">
-    <p>We are experienced in researching people's attitudes, values and behaviours - particularly how people engage with nature - using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
+    <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
     <p>Our experience includes...</p>
     <ul>
-      <li>Questionnaire survey design, including developing a major national survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, an <a href="https://news.exeter.ac.uk/environment-and-sustainability-institute/scientists-want-your-view-on-watching-nature-through-the-window/">online survey campaign with The Wildlife Trusts</a> as part of their 30 Days Wild campaign, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
+      <li>Questionnaire design, including developing a major national survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, an <a href="https://news.exeter.ac.uk/environment-and-sustainability-institute/scientists-want-your-view-on-watching-nature-through-the-window/">online survey campaign with The Wildlife Trusts</a> as part of their 30 Days Wild campaign, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
       <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
       <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
     </ul>
@@ -75,7 +75,7 @@
   </section>
 
   <section>
-    <h2>4. Consultancy Services</h2>
+    <h2 style="text-align: right;">4. Consultancy Services</h2>
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
     <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
