--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
     <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
     <p>Our experience includes...</p>
     <ul>
-      <li>Questionnaire design, including developing a major national survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, an <a href="https://news.exeter.ac.uk/environment-and-sustainability-institute/scientists-want-your-view-on-watching-nature-through-the-window/">online survey campaign with The Wildlife Trusts</a> as part of their 30 Days Wild campaign, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
+      <li>Questionnaire design, including developing a survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
       <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
       <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
     </ul>
