--- a/services.html
+++ b/services.html
@@ -26,9 +26,9 @@
 </section>
 
   <section>
-    <h2>1. Evidence Synthesis</h2>
 <div class="sidepicture-section">
   <div class="sidepicture-text">
+    <h2>1. Evidence Synthesis</h2>
     <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping organisations to make informed decisions based on the best available knowledge.</p>
     <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
 
@@ -43,9 +43,9 @@
   </section>
 
   <section>
-    <h2 style="text-align: right;">2. Data Services & Geographical Information Systems (GIS)</h2>
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
+    <h2>2. Data Services & Geographical Information Systems (GIS)</h2>
     <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
     <p>Our experience includes...</p>
     <ul>
@@ -59,9 +59,9 @@
   </section>
 
   <section>
-    <h2>3. Social Science Approaches</h2>
 <div class="sidepicture-section">
   <div class="sidepicture-text">
+    <h2>3. Social Science Approaches</h2>
     <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
     <p>Our experience includes...</p>
     <ul>
@@ -75,9 +75,9 @@
   </section>
 
   <section>
-    <h2 style="text-align: right;">4. Consultancy Services</h2>
 <div class="sidepicture-section reverse">
   <div class="sidepicture-text">
+    <h2>4. Consultancy Services</h2>
     <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
     <p>Our experience includes...</p>
     <ul>
@@ -92,9 +92,9 @@
   </section>
 
   <section>
-    <h2>5. ANYTHING ELSE EMILY?</h2>
 <div class="sidepicture-section">
   <div class="sidepicture-text">
+    <h2>5. ANYTHING ELSE EMILY?</h2>
     <p>[Or split out e.g. Grant Writing from above?]</p>
   </div>
   <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
