--- a/services.html
+++ b/services.html
@@ -26,89 +26,78 @@
 </section>
 
   <section>
-<div class="sidepicture-section">
-  <div class="sidepicture-text">
-    <h2>1. Evidence Synthesis</h2>
-    <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping organisations to make informed decisions based on the best available knowledge.</p>
-    <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
-
-    <ul>
-      <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
-      <li>Environmental links between forests and oceans for The Woodland Trust.</li>
-      <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
-    </ul>
+  <h2 class="sidepicture-heading">1. Evidence Synthesis</h2>
+  <div class="sidepicture-section">
+    <div class="sidepicture-text">
+      <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping organisations to make informed decisions based on the best available knowledge.</p>
+      <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
+      <ul>
+        <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
+        <li>Environmental links between forests and oceans for The Woodland Trust.</li>
+        <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
+      </ul>
+    </div>
+    <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
   </div>
-  <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
-</div>
-  </section>
+</section>
 
-  <section>
-<div class="sidepicture-section reverse">
-  <div class="sidepicture-text">
-    <h2>2. Data Services & Geographical Information Systems (GIS)</h2>
-    <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
-    <p>Our experience includes...</p>
-    <ul>
-      <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
-      <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remote assessment of road verge habitats using Google Earth and Google Street View</a>.</li>
-      <li>Comparing light pollution levels across UK local authorities and habitats.</li>
-    </ul>
+<section>
+  <h2 class="sidepicture-heading">2. Data Services & Geographical Information Systems (GIS)</h2>
+  <div class="sidepicture-section reverse">
+    <div class="sidepicture-text">
+      <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
+      <p>Our experience includes...</p>
+      <ul>
+        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
+        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remote assessment of road verge habitats using Google Earth and Google Street View</a>.</li>
+        <li>Comparing light pollution levels across UK local authorities and habitats.</li>
+      </ul>
+    </div>
+    <img src="images/data-services.jpg" alt="" class="sidepicture-image">
   </div>
-  <img src="images/data-services.jpg" alt="" class="sidepicture-image">
-</div>
-  </section>
+</section>
 
-  <section>
-<div class="sidepicture-section">
-  <div class="sidepicture-text">
-    <h2>3. Social Science Approaches</h2>
-    <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
-    <p>Our experience includes...</p>
-    <ul>
-      <li>Questionnaire design, including developing a survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
-      <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
-      <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
-    </ul>
+<section>
+  <h2 class="sidepicture-heading">3. Social Science Approaches</h2>
+  <div class="sidepicture-section">
+    <div class="sidepicture-text">
+      <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
+      <p>Our experience includes...</p>
+      <ul>
+        <li>Questionnaire design, including developing a survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
+        <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
+        <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
+      </ul>
+    </div>
+    <img src="images/social-science.jpg" alt="" class="sidepicture-image">
   </div>
-  <img src="images/social-science.jpg" alt="" class="sidepicture-image">
-</div>
-  </section>
+</section>
 
-  <section>
-<div class="sidepicture-section reverse">
-  <div class="sidepicture-text">
-    <h2>4. Consultancy Services</h2>
-    <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
-    <p>Our experience includes...</p>
-    <ul>
-      <li>Grant writing - Using our experience as reviewers, we can help make your grant more impactful.</li>
-      <li>Programme development - Supporting the design, management and delivery of scientific research programmes and related activities.</li>
-      <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
-      <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
-    </ul>
+<section>
+  <h2 class="sidepicture-heading">4. Consultancy Services</h2>
+  <div class="sidepicture-section reverse">
+    <div class="sidepicture-text">
+      <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
+      <p>Our experience includes...</p>
+      <ul>
+        <li>Grant writing - Using our experience as reviewers, we can help make your grant more impactful.</li>
+        <li>Programme development - Supporting the design, management and delivery of scientific research programmes and related activities.</li>
+        <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
+        <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
+      </ul>
+    </div>
+    <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
   </div>
-  <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
-</div>
-  </section>
+</section>
 
-  <section>
-<div class="sidepicture-section">
-  <div class="sidepicture-text">
-    <h2>5. ANYTHING ELSE EMILY?</h2>
-    <p>[Or split out e.g. Grant Writing from above?]</p>
+<section>
+  <h2 class="sidepicture-heading">5. ANYTHING ELSE EMILY?</h2>
+  <div class="sidepicture-section">
+    <div class="sidepicture-text">
+      <p>[Or split out e.g. Grant Writing from above?]</p>
+    </div>
+    <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
   </div>
-  <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
-</div>
-  </section>
-
-  <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
-    <h2>Need something else?</h2>
-  <p>
-    If you have a project in mind that isn’t listed above, we’d love to <a href="contact.html">hear from you</a>.
-  </p>
-  <p>
-    We’re always happy to discuss your needs and help you find the right next steps.
-  </p>
 </section>
 
   <footer>
