--- a/testimonials.html
+++ b/testimonials.html
@@ -31,43 +31,40 @@
        style="width: 100%; height: 100%; object-fit: cover; display: block;">
 
   <div style="
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    right: 40%;
-    color: white;
-    font-style: italic;
-    font-size: 1.1rem;
-    text-align: left;">
-    <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
-    <p style="margin-top: 0.5rem; font-weight: bold;">Sam Manning, The Woodland Trust</p>
-  </div>
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  right: 40%;
+  color: white;
+  font-size: 1.1rem;
+  text-align: left;">
+  <p style="font-style: italic;">"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
+  <p style="margin-top: 0.5rem; font-weight: bold;">Sam Manning, The Woodland Trust</p>
+</div>
 
-  <div style="
-    position: absolute;
-    top: 40%;
-    left: 40%;
-    right: 10%;
-    color: white;
-    font-style: italic;
-    font-size: 1.1rem;
-    text-align: right;">
-    <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-    <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 2, ORGANISATION 2</p>
-  </div>
+<div style="
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  right: 10%;
+  color: white;
+  font-size: 1.1rem;
+  text-align: right;">
+  <p style="font-style: italic;">"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
+  <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 2, ORGANISATION 2</p>
+</div>
 
-  <div style="
-    position: absolute;
-    top: 70%;
-    left: 10%;
-    right: 40%;
-    color: white;
-    font-style: italic;
-    font-size: 1.1rem;
-    text-align: left;">
-    <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-    <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 3, ORGANISATION 3</p>
-  </div>
+<div style="
+  position: absolute;
+  top: 70%;
+  left: 10%;
+  right: 40%;
+  color: white;
+  font-size: 1.1rem;
+  text-align: left;">
+  <p style="font-style: italic;">"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
+  <p style="margin-top: 0.5rem; font-weight: bold;">PERSON 3, ORGANISATION 3</p>
+</div>
 
 </section>
 
