--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
 </section>
 
 <section>
-  <h2 class="sidepicture-heading">2. Data Services & Geographical Information Systems (GIS)</h2>
+  <h2 class="sidepicture-heading align-right">2. Data Services & Geographical Information Systems (GIS)</h2>
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
@@ -74,7 +74,7 @@
 </section>
 
 <section>
-  <h2 class="sidepicture-heading">4. Consultancy Services</h2>
+  <h2 class="sidepicture-heading align-right">4. Consultancy Services</h2>
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
