--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,7 @@
   <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
   </p>
+    <p>Between us, we have published more than XX academic papers, which have been cited more than XXXX times.</p>
 
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
