--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
       <p>Our experience includes...</p>
       <ul>
         <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
-        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remote assessment of road verge habitats using Google Earth and Google Street View</a>.</li>
+        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remotely assessing road verge habitats using Google Earth and Street View</a>.</li>
         <li>Comparing light pollution levels across UK local authorities and habitats.</li>
       </ul>
     </div>
