--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>4. Consultancy Services</h2>
-      <p>We are also able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
+      <p>We are able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
       <p>Our experience includes...</p>
       <ul>
         <li>Grant writing - Using our experience as reviewers, we can help make your grant more impactful.</li>
