--- a/services.html
+++ b/services.html
@@ -44,8 +44,8 @@
 <section>
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
-      <h2>2. Data Services & Geographical Information Systems (GIS)</h2>
-      <p>We can assist with managing, visualising and analysing ecological and social data, including spatial mapping and analysis and using large, unwieldy datasets.</p>
+      <h2>2. Data Services</h2>
+      <p>We can assist with managing, visualising and analysing ecological and social data. This includes spatial mapping and analysis in Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
       <p>Our experience includes...</p>
       <ul>
         <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
