--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>2. Data Services</h2>
-      <p>We can assist with managing, visualising and analysing ecological and social data. This includes spatial mapping and analysis in Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
+      <p>We can assist with managing, visualising and analysing ecological and social data. This includes spatial mapping and analysis using Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
       <p>Our experience includes...</p>
       <ul>
         <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
