--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
       <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
       <ul>
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
-        <li>Environmental links between forests and oceans for The Woodland Trust.</li>
+        <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
         <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
       </ul>
     </div>
