--- a/services.html
+++ b/services.html
@@ -28,7 +28,33 @@
 <section>
   <div class="sidepicture-section">
     <div class="sidepicture-text">
-      <h2>1. Evidence Synthesis</h2>
+      <h2>1. Ecological Services</h2>
+      <p>DETAILS</p>
+    </div>
+    <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
+  </div>
+</section>
+
+  <section>
+  <div class="sidepicture-section-reverse">
+    <div class="sidepicture-text">
+      <h2>2. Social Science Approaches</h2>
+      <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
+      <p>Our experience includes...</p>
+      <ul>
+        <li>Questionnaire design, including developing a survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
+        <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
+        <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
+      </ul>
+    </div>
+    <img src="images/social-science.jpg" alt="" class="sidepicture-image">
+  </div>
+</section>
+
+<section>
+  <div class="sidepicture-section">
+    <div class="sidepicture-text">
+      <h2>3. Evidence Synthesis</h2>
       <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping organisations to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
       <ul>
@@ -44,7 +70,7 @@
 <section>
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
-      <h2>2. Data Services</h2>
+      <h2>4. Data Services</h2>
       <p>We can assist with managing, visualising and analysing ecological and social data. This includes spatial mapping and analysis using Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
       <p>Our experience includes...</p>
       <ul>
@@ -60,23 +86,7 @@
 <section>
   <div class="sidepicture-section">
     <div class="sidepicture-text">
-      <h2>3. Social Science Approaches</h2>
-      <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
-      <p>Our experience includes...</p>
-      <ul>
-        <li>Questionnaire design, including developing a survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
-        <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
-        <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
-      </ul>
-    </div>
-    <img src="images/social-science.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
-
-<section>
-  <div class="sidepicture-section reverse">
-    <div class="sidepicture-text">
-      <h2>4. Consultancy Services</h2>
+      <h2>5. Programme development</h2>
       <p>We are able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
       <p>Our experience includes...</p>
       <ul>
@@ -89,17 +99,6 @@
     <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
   </div>
 </section>
-
-<section>
-  <div class="sidepicture-section">
-    <div class="sidepicture-text">
-      <h2>5. ANYTHING ELSE EMILY?</h2>
-      <p>[Or split out e.g. Grant Writing from above?]</p>
-    </div>
-    <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
-
 
   <footer>
   <p class="footer-contact">
