--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
 </section>
 
   <section>
-  <div class="sidepicture-section-reverse">
+  <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>2. Social Science Approaches</h2>
       <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
@@ -47,7 +47,7 @@
         <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
       </ul>
     </div>
-    <img src="images/social-science.jpg" alt="" class="sidepicture-image">
+    <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
   </div>
 </section>
 
