--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
         <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
       </ul>
     </div>
-    <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
+    <img src="images/social-science.jpg" alt="" class="sidepicture-image">
   </div>
 </section>
 
