--- a/services.html
+++ b/services.html
@@ -29,7 +29,14 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>1. Ecological Services</h2>
-      <p>DETAILS</p>
+      <p>We are able to provide organisations with ecological services, including ecological surveys, studies and experiments, 
+        as well as practical management guidance, across both terrestrial and marine environments.</p>
+      <p>Our experience includes...</p>
+      <ul>
+        <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
+        <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
+        <li>DETAILS
+      </ul>
     </div>
     <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
   </div>
@@ -91,9 +98,8 @@
       <p>Our experience includes...</p>
       <ul>
         <li>Grant writing - Using our experience as reviewers, we can help make your grant more impactful.</li>
-        <li>Programme development - Supporting the design, management and delivery of scientific research programmes and related activities.</li>
-        <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
-        <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
+        <li>Project management - Supporting the design, management and delivery of scientific research programmes and related activities.</li>
+        <li>DETAILS - equality / gender?
       </ul>
     </div>
     <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
