--- a/services.html
+++ b/services.html
@@ -29,8 +29,8 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>1. Ecological Services</h2>
-      <p>We are able to provide organisations with ecological services, including ecological surveys, studies and experiments, 
-        as well as practical management guidance, across both terrestrial and marine environments.</p>
+      <p>We are able to support organisations with ecological studies and experiments, 
+        and can provide practical management guidance, across both terrestrial and marine environments.</p>
       <p>Our experience includes...</p>
       <ul>
         <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
