--- a/services.html
+++ b/services.html
@@ -25,18 +25,22 @@
   <h1>Our Services & Experience</h1>
 </section>
 
+  <section style="width: 50%; margin: 3rem 0; text-align: left;">
+  <h1>Our Services & Experience</h1>
+</section>
+
 <section>
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>1. Ecological Services</h2>
-      <p>We are able to support organisations with ecological studies and experiments, 
-        and can provide practical management guidance, across both terrestrial and marine environments.</p>
-      <p>Our experience includes...</p>
-      <ul>
-        <li>Habitat / land management - Particularly relating to road verges, public spaces, gardens, farmland and pollinators.</li>
-        <li>Marine environment - Particularly relating to marine megafauna, fishing and microplastics. (EMILY TO EDIT)</li>
-        <li>DETAILS
-      </ul>
+<p>We offer support with ecological research - be it surveys or experiments - across both terrestrial and marine ecosystems. We are also able to provide practical management guidance.</p>
+<p>Our experience covers...</p>
+<ul>
+  <li><strong>Ecological studies</strong> - We can design and run surveys and experiments to help answer your ecological questions.
+  <li><strong>Habitat and land management</strong> – Covering topics such as road verges, public green spaces, farmland, and pollinator habitats.</li>
+  <li><strong>Marine conservation</strong> – Covering topics such as marine megafauna, fisheries, and the impacts of microplastics.</li>
+</ul>
+      
     </div>
     <img src="images/bee-osr.jpg" alt="" class="sidepicture-image">
   </div>
@@ -46,12 +50,12 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>2. Social Science Approaches</h2>
-      <p>We are experienced in researching people's attitudes, values and behaviours, using surveys, interviews and digital data sources. This information can help to shape more effective and inclusive strategies in nature conservation and beyond.</p>
-      <p>Our experience includes...</p>
+      <p>By revealing people's attitudes, motivations and behaviours, we can help you shape more effective and inclusive strategies - both within nature conservation and beyond.</p>
+      <p>Our experience includes a variety of social science approaches, including...</p>
       <ul>
-        <li>Questionnaire design, including developing a survey of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and an online survey <a href="https://doi.org/10.1002/pan3.10168">of public attitudes and behaviours relating to pollinators</a>.</li>
-        <li>Analysis of large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
-        <li>Conducting stakeholder interviews and focus groups <a href="https://doi.org/10.1002/2688-8319.12198">to guide a conservation strategy for hazel dormouse</a>.</li>
+        <li><strong>Questionnaire design</strong> - Including developing surveys of 18,000 adults across England <a href="https://doi.org/10.1002/pan3.70014">with Natural England</a>, and of people's attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
+        <li><strong>Stakeholder interviews & focus groups</strong> - Including to inform development of a <a href="https://doi.org/10.1002/2688-8319.12198">conservation strategy for hazel dormouse</a>.</li>
+        <li><strong>Analysis of digital data sources</strong> - Including combining large-scale survey, social media and digital data sources relating to people-nature relations <a href="https://doi.org/10.1002/pan3.10381">with Natural England</a>.</li>
       </ul>
     </div>
     <img src="images/social-science.jpg" alt="" class="sidepicture-image">
@@ -62,12 +66,12 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>3. Evidence Synthesis</h2>
-      <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping organisations to make informed decisions based on the best available knowledge.</p>
+      <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping you to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
       <ul>
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
-        <li>Microplastic pollution and marine megafauna entanglements. EMILY TO EDIT + PROVIDE LINKS</li>
+        <li>Plastic pollution and <a href="https://doi.org/10.3354/esr00865">marine turtle entanglements</a>.</li>
       </ul>
     </div>
     <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
