--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
     <div class="sidepicture-text">
       <h2>3. Evidence Synthesis</h2>
       <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping you to make informed decisions based on the best available knowledge.</p>
-      <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues including...</p>
+      <p>Our work spans a wide range of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
@@ -82,7 +82,8 @@
   <div class="sidepicture-section reverse">
     <div class="sidepicture-text">
       <h2>4. Data Services</h2>
-      <p>We can assist with managing, visualising and analysing ecological and social data. This includes spatial mapping and analysis using Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
+      <p>We can assist you with managing, visualising and analysing ecological and social data.</p>
+      <p>This includes spatial mapping and analysis using Geographical Information Systems (GIS), and projects involving large, unwieldy datasets.</p>
       <p>Our experience includes...</p>
       <ul>
         <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution across Great Britain</a>.</li>
@@ -98,12 +99,12 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>5. Programme development</h2>
-      <p>We are able to provide organisations with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
+      <p>We can provide you with scientific support for grant writing, programme development, and practical management guidance across both terrestrial and marine environments.</p>
       <p>Our experience includes...</p>
       <ul>
-        <li>Grant writing - Using our experience as reviewers, we can help make your grant more impactful.</li>
-        <li>Project management - Supporting the design, management and delivery of scientific research programmes and related activities.</li>
-        <li>DETAILS - equality / gender?
+        <li><strong>Grant writing</strong> – Drawing on our experience as both applicants and reviewers, we can help craft compelling, impactful proposals that stand out.</li>
+        <li><strong>Project management</strong> – Supporting the design, coordination and delivery of scientific research programmes and related activities.</li>
+        <li><strong>Capacity building and community engagement</strong> – Including work on gender, equality, and inclusive participation in environmental initiatives.</li>
       </ul>
     </div>
     <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
