--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
       <ul>
         <li><strong>Grant writing</strong> – Drawing on our experience as both applicants and reviewers, we can help craft compelling, impactful proposals that stand out.</li>
         <li><strong>Project management</strong> – Supporting the design, coordination and delivery of scientific research programmes and related activities.</li>
-        <li><strong>Capacity building and community engagement</strong> – Including work on gender, equality, and inclusive participation in environmental initiatives.</li>
+        <li><strong>Capacity building & community engagement</strong> – Including work on gender, equality and inclusive participation in environmental initiatives.</li>
       </ul>
     </div>
     <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
