--- a/services.html
+++ b/services.html
@@ -37,8 +37,8 @@
 <p>Our experience covers...</p>
 <ul>
   <li><strong>Ecological studies</strong> - We can design and run surveys and experiments to help answer your ecological questions.
-  <li><strong>Habitat and land management</strong> – Covering topics such as road verges, public green spaces, farmland, and pollinator habitats.</li>
-  <li><strong>Marine conservation</strong> – Covering topics such as marine megafauna, fisheries, and the impacts of microplastics.</li>
+  <li><strong>Habitat and land management</strong> – Including topics such as road verges, public green spaces, farmland, and pollinator habitats.</li>
+  <li><strong>Marine conservation</strong> – Including topics such as marine megafauna, fisheries, and the impacts of microplastics.</li>
 </ul>
       
     </div>
